# toy-studio

./: .cursorrules  .gitignore  .gitmodules  Cargo.toml  README.md  ROADMAP.md  Trunk.toml  index.html  styles.css  tailwind.config.js  tailwind.css
products/: pdf-math-translate.toml
src/: app.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: app_list.rs  mod.rs
src-tauri/src/command/: config.rs  config_command.rs  dialog.rs  dialog_command.rs  git.rs  git_command.rs  mod.rs  product.rs  product_command.rs  uv.rs
src-tauri/src/common/: domains.rs  mod.rs  os_utils.rs  template.rs
src-tauri/src/cross/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/git/: git_clone.rs
src-tauri/src/uv/: mod.rs  uv_cache.rs  uv_envs.rs
src/common/: domains.rs  invoke.rs  mod.rs  path_utils.rs  vo.rs
src/components/: banner.rs  effect_demo.rs  event_demo.rs  list_demo.rs  mod.rs  titlebar.rs  toast.rs
src/components/admin/: app_store_page.rs  dashbaord_page.rs  dashboard_page.rs  file_page.rs  layout.rs  mod.rs  pages.rs  routes.rs  settings_page.rs  todo.rs  uv_page.rs
src/components/admin/settings/: global_settings_page.rs  mod.rs  settings_page.rs  uv_pythons_page.rs  uv_settings.rs  uv_settings_page.rs
src/components/frame/: banner.rs  layout.rs  mod.rs  routes.rs  sidebar.rs
src/components/pages/: app_store_page.rs  dashboard_page.rs  file_page.rs  styles.rs
src/components/pages/settings/: global_settings_page.rs  mod.rs  uv_pythons_page.rs  uv_settings_page.rs
src/store/: mod.rs
