[package]
name = "ai-studio-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sycamore = { version = "0.9", features = ["suspense"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
sycamore-router = "0.9"
web-sys = { version = "0.3", features = ["console"] }
serde_json = "1.0.140"


[workspace]
members = ["src-tauri"]
