[package]
name = "ai-studio-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sycamore = { version = "0.9", features = ["suspense", "serde", "suspense"] }
sycamore-router = "0.9"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = [
  "console",
  "Location",
  "Storage",
  "HtmlInputElement",
] }
uuid = { version = "1.15", features = ["serde", "v4", "js"] }
gloo-timers = { version = "0.3", features = ["futures"] }

[workspace]
members = ["src-tauri"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(sycamore_force_ssr)"] }
